# gpg-chat

./: .gitignore  Cargo.toml  README.md  sqlite3.lib
.github/workflows/: clippy.yml
appflow/: API-Routes.md  API.drawio  password.drawio
appflow/backend/: API-Routes.md
appflow/client/: password.drawio
appflow/server/api/v1/: register.drawio
backend/: Cargo.toml
backend/src/: appconfig.rs  database.rs  main.rs
backend/src/v1/: mod.rs
flowcarts/: API-design.md  API-design.txt  api.drawio  server-client.drawio
frontend/: Cargo.toml  index.html
frontend/css/: styles.css
frontend/src/: main.rs
src/: appconfig.rs  database.rs  main.rs
src/utils/: login.rs
src/v1/: mod.rs
src/v1/routes/: auth.rs  ping.rs
src/v1/structures/: client.rs  user.rs
ui/: index.html
