[package]
name = "gpg-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2" }
json = "0.12.4"
configparser = "3.0.2"
regex = "1.6.0"
rand = "0.8.5"
rusqlite = "0.28"
tokio-rusqlite = "0.3"
