[package]
name = "gpg-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Backend
rocket = { version = "0.5.0-rc.2" }
rusqlite = "0.28"
tokio-rusqlite = "0.3"

# Frontend
yew = "0.19"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"

# Shared
sha2 = "0.10.6"
regex = "1.6.0"
json = "0.12.4"
configparser = "3.0.2"



[workspace]
members = [
    "backend",
    "frontend"
]

[[bin]]
name = "backend"
path = "backend/src/main.rs"

[[bin]]
name = "frontend"
path = "frontend/src/main.rs"
